# gridly-app-cell-coverage

backend/: pyproject.toml
backend/src/: main.py
backend/src/api/: routes.py
backend/src/services/: calculations.py  distance.py  gain.py  propagation.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.tsbuildinfo
frontend/src/: App.tsx
frontend/src/components/: app-sidebar.tsx  cell-coverage.map.tsx  nav-user.tsx
frontend/src/context/: coverage-context.tsx
frontend/src/lib/: utils.ts
frontend/src/types/: map.ts
